--- a/css/main.css
+++ b/css/main.css
@@ -22,16 +22,24 @@ body {
   white-space: pre-wrap;
 }
 
+#main-wrapper .section-title {
+  /* TODO */
+  font-weight: bold;
+  margin: 5px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 #session-info {
   grid-column: 7/9;
-  grid-row: 1/3;
+  grid-row: 1/2;
   
   /* background-color: green; */
 }
 
 #lobby-list {
   grid-column: 7/9;
-  grid-row: 3/4;
+  grid-row: 2/4;
 }
 
 #selected-lobby {
