--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,24 @@ body {
 }
 
 #main-wrapper > div {
+  display: flex;
+  flex-flow: column;
   background-color: #2a2a2a;
+  padding: 10px;
+  gap: 5px;
+}
+
+#main-wrapper > div > .section-content {
   overflow-y: scroll;
   overflow-wrap: break-word;
+  flex-grow: 1;
+}
+
+.dynamic-list {
+  overflow: auto;
+  display: flex;
+  flex-direction: column-reverse;
+  height: 100%;
 }
 
 #main-wrapper pre {
@@ -25,7 +40,6 @@ body {
 #main-wrapper .section-title {
   /* TODO */
   font-weight: bold;
-  margin: 5px;
   text-align: center;
   text-transform: uppercase;
 }
